--- a/404.html
+++ b/404.html
@@ -191,7 +191,7 @@
                       <p class="text-content__paragraph">Получайте специальные предложения и новости сервиса</p>
                     </div>
                   </section>
-                  <form action="/404.html">
+                  <form action="/toxin/404.html">
                     <div class="input-group">
                       <p class="input-group__split">
                         <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
