--- a/auth.html
+++ b/auth.html
@@ -91,7 +91,7 @@
             <div class="auth-page__wrap">
               <div class="auth-card">
                 <div class="auth-card__wrap">
-                  <form action="/404.html">
+                  <form action="/toxin/404.html">
                     <h2 class="auth-card__title">Войти</h2>
                     <fieldset class="auth-card__fieldset">
                       <div class="input-group">
@@ -198,7 +198,7 @@
                       <p class="text-content__paragraph">Получайте специальные предложения и новости сервиса</p>
                     </div>
                   </section>
-                  <form action="/404.html">
+                  <form action="/toxin/404.html">
                     <div class="input-group">
                       <p class="input-group__split">
                         <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
