--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <div class="index-block__wrap">
                 <section class="date-wishes">
                   <div class="date-wishes__wrap">
-                    <form action="/rooms.html">
+                    <form action="/toxin/rooms.html">
                       <fieldset class="date-wishes__fieldset">
                         <legend class="date-wishes__title">Найдём номера под ваши пожелания</legend>
                         <div class="date-wishes__group">
@@ -216,7 +216,7 @@
                       <p class="text-content__paragraph">Получайте специальные предложения и новости сервиса</p>
                     </div>
                   </section>
-                  <form action="/404.html">
+                  <form action="/toxin/404.html">
                     <div class="input-group">
                       <p class="input-group__split">
                         <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
