--- a/registration.html
+++ b/registration.html
@@ -91,7 +91,7 @@
             <div class="registration-page__wrap">
               <div class="register-card">
                 <div class="register-card__wrap">
-                  <form action="/404.html">
+                  <form action="/toxin/404.html">
                     <h2 class="register-card__title">Регистрация аккаунта</h2>
                     <fieldset class="register-card__fieldset">
                       <div class="input-group">
@@ -229,7 +229,7 @@
                       <p class="text-content__paragraph">Получайте специальные предложения и новости сервиса</p>
                     </div>
                   </section>
-                  <form action="/404.html">
+                  <form action="/toxin/404.html">
                     <div class="input-group">
                       <p class="input-group__split">
                         <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
