--- a/room-details.html
+++ b/room-details.html
@@ -189,7 +189,7 @@
               </div>
               <section class="total-card">
                 <div class="total-card__wrap">
-                  <form action="/404.html">
+                  <form action="/toxin/404.html">
                     <div class="total-card__head">
                       <h2 class="total-card__title">№ <span>888</span> <b>люкс</b></h2>
                       <p class="total-card__per-day"><b>9 990₽</b> в сутки</p>
@@ -327,7 +327,7 @@
                       <p class="text-content__paragraph">Получайте специальные предложения и новости сервиса</p>
                     </div>
                   </section>
-                  <form action="/404.html">
+                  <form action="/toxin/404.html">
                     <div class="input-group">
                       <p class="input-group__split">
                         <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
