--- a/cards.html
+++ b/cards.html
@@ -25,7 +25,7 @@
           <div class="cards-page__item">
             <section class="date-wishes">
               <div class="date-wishes__wrap">
-                <form action="/rooms.html">
+                <form action="/toxin/rooms.html">
                   <fieldset class="date-wishes__fieldset">
                     <legend class="date-wishes__title">Найдём номера под ваши пожелания</legend>
                     <div class="date-wishes__group">
@@ -59,7 +59,7 @@
           <div class="cards-page__item">
             <div class="register-card">
               <div class="register-card__wrap">
-                <form action="/404.html">
+                <form action="/toxin/404.html">
                   <h2 class="register-card__title">Регистрация аккаунта</h2>
                   <fieldset class="register-card__fieldset">
                     <div class="input-group">
@@ -113,7 +113,7 @@
           <div class="cards-page__item">
             <section class="total-card">
               <div class="total-card__wrap">
-                <form action="/404.html">
+                <form action="/toxin/404.html">
                   <div class="total-card__head">
                     <h2 class="total-card__title">№ <span>888</span> <b>люкс</b></h2>
                     <p class="total-card__per-day"><b>9 990₽</b> в сутки</p>
@@ -165,7 +165,7 @@
           <div class="cards-page__item">
             <div class="auth-card">
               <div class="auth-card__wrap">
-                <form action="/404.html">
+                <form action="/toxin/404.html">
                   <h2 class="auth-card__title">Войти</h2>
                   <fieldset class="auth-card__fieldset">
                     <div class="input-group">
