--- a/headers-and-footers.html
+++ b/headers-and-footers.html
@@ -235,7 +235,7 @@
                         <p class="text-content__paragraph">Receive our latest news and promotions in your inbox!</p>
                       </div>
                     </section>
-                    <form action="/404.html">
+                    <form action="/toxin/404.html">
                       <div class="input-group">
                         <p class="input-group__split">
                           <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Your email address"/>
