--- a/cards.html
+++ b/cards.html
@@ -178,7 +178,7 @@
                   <button class="button  button_with-icon" type="submit">Войти</button>
                 </form>
                 <div class="auth-card__account-enter">
-                  <p>Нет аккаунта на Toxin?</p><a class="button  button_empty" href="/registration.html">Создать</a>
+                  <p>Нет аккаунта на Toxin?</p><a class="button  button_empty" href="/toxin/registration.html">Создать</a>
                 </div>
               </div>
             </div>
