--- a/auth.html
+++ b/auth.html
@@ -104,7 +104,7 @@
                     <button class="button  button_with-icon" type="submit">Войти</button>
                   </form>
                   <div class="auth-card__account-enter">
-                    <p>Нет аккаунта на Toxin?</p><a class="button  button_empty" href="/registration.html">Создать</a>
+                    <p>Нет аккаунта на Toxin?</p><a class="button  button_empty" href="/toxin/registration.html">Создать</a>
                   </div>
                 </div>
               </div>
@@ -158,10 +158,10 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">Навигация</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">О нас</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Новости</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Служба поддержки</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Услуги</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">О нас</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Новости</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Служба поддержки</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Услуги</a></li>
                       </ul>
                     </div>
                   </section>
@@ -171,10 +171,10 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">О нас</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">О сервисе</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Наша команда</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Вакансии</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Инвесторы</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">О сервисе</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Наша команда</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Вакансии</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Инвесторы</a></li>
                       </ul>
                     </div>
                   </section>
@@ -184,9 +184,9 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">Служба поддержки</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Соглашения</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Сообщества</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Связь с нами</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Соглашения</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Сообщества</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Связь с нами</a></li>
                       </ul>
                     </div>
                   </section>
