--- a/headers-and-footers.html
+++ b/headers-and-footers.html
@@ -195,10 +195,10 @@
                       <div class="nav-menu__wrap">
                         <h2 class="nav-menu__title">Navigation</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">About us</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">News</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Support</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Products</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">About us</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">News</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Support</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Products</a></li>
                         </ul>
                       </div>
                     </section>
@@ -208,10 +208,10 @@
                       <div class="nav-menu__wrap">
                         <h2 class="nav-menu__title">About us</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Who we are</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Our team</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Careers</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Investors</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Who we are</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Our team</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Careers</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Investors</a></li>
                         </ul>
                       </div>
                     </section>
@@ -221,9 +221,9 @@
                       <div class="nav-menu__wrap">
                         <h2 class="nav-menu__title">Support</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Documentation</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Community</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Get in Touch</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Documentation</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Community</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Get in Touch</a></li>
                         </ul>
                       </div>
                     </section>
