--- a/registration.html
+++ b/registration.html
@@ -189,10 +189,10 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">Навигация</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">О нас</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Новости</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Служба поддержки</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Услуги</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">О нас</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Новости</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Служба поддержки</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Услуги</a></li>
                       </ul>
                     </div>
                   </section>
@@ -202,10 +202,10 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">О нас</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">О сервисе</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Наша команда</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Вакансии</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Инвесторы</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">О сервисе</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Наша команда</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Вакансии</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Инвесторы</a></li>
                       </ul>
                     </div>
                   </section>
@@ -215,9 +215,9 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">Служба поддержки</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Соглашения</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Сообщества</a></li>
-                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Связь с нами</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Соглашения</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Сообщества</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Связь с нами</a></li>
                       </ul>
                     </div>
                   </section>
