--- a/headers-and-footers.html
+++ b/headers-and-footers.html
@@ -59,18 +59,18 @@
                   <ul class="main-menu__list">
                     <li class="main-menu__item  main-menu__item_active"><a class="main-menu__item-link">Home</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">About us</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">About us</a>
                     </li>
                     <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Services</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">service</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">service</a></li>
                       </ul>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Careers</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Careers</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">News</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">News</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Documentation</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Documentation</a>
                     </li>
                   </ul>
                 </nav>
@@ -125,18 +125,18 @@
                   <ul class="main-menu__list">
                     <li class="main-menu__item  main-menu__item_active"><a class="main-menu__item-link">Home</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">About us</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">About us</a>
                     </li>
                     <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Services</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">service</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">service</a></li>
                       </ul>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Careers</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Careers</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">News</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">News</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Documentation</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Documentation</a>
                     </li>
                   </ul>
                 </nav>
