--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
                 <div class="main-menu__burger-icon" id="mainMenuBurgerIcon"><span></span><span></span><span></span></div>
                 <nav class="main-menu__nav">
                   <ul class="main-menu__list">
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">О нас</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">О нас</a>
                     </li>
                     <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Услуги</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Подбор отелей</a></li>
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Заказать трансфер</a></li>
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Рейтинг отелей</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">Подбор отелей</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">Заказать трансфер</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">Рейтинг отелей</a></li>
                       </ul>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Вакансии</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Вакансии</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Новости</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Новости</a>
                     </li>
                     <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Соглашения</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Пользовательские</a></li>
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Международные</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">Пользовательские</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">Международные</a></li>
                       </ul>
                     </li>
                   </ul>
