--- a/cards.html
+++ b/cards.html
@@ -25,7 +25,7 @@
           <div class="cards-page__item">
             <section class="date-wishes">
               <div class="date-wishes__wrap">
-                <form action="/toxin/rooms.html">
+                <form action="/rooms.html">
                   <fieldset class="date-wishes__fieldset">
                     <legend class="date-wishes__title">Найдём номера под ваши пожелания</legend>
                     <div class="date-wishes__group">
@@ -59,7 +59,7 @@
           <div class="cards-page__item">
             <div class="register-card">
               <div class="register-card__wrap">
-                <form action="/toxin/404.html">
+                <form action="/404.html">
                   <h2 class="register-card__title">Регистрация аккаунта</h2>
                   <fieldset class="register-card__fieldset">
                     <div class="input-group">
@@ -113,7 +113,7 @@
           <div class="cards-page__item">
             <section class="total-card">
               <div class="total-card__wrap">
-                <form action="/toxin/404.html">
+                <form action="/404.html">
                   <div class="total-card__head">
                     <h2 class="total-card__title">№ <span>888</span> <b>люкс</b></h2>
                     <p class="total-card__per-day"><b>9 990₽</b> в сутки</p>
@@ -165,7 +165,7 @@
           <div class="cards-page__item">
             <div class="auth-card">
               <div class="auth-card__wrap">
-                <form action="/toxin/404.html">
+                <form action="/404.html">
                   <h2 class="auth-card__title">Войти</h2>
                   <fieldset class="auth-card__fieldset">
                     <div class="input-group">
@@ -178,7 +178,7 @@
                   <button class="button  button_with-icon" type="submit">Войти</button>
                 </form>
                 <div class="auth-card__account-enter">
-                  <p>Нет аккаунта на Toxin?</p><a class="button  button_empty" href="/toxin/registration.html">Создать</a>
+                  <p>Нет аккаунта на Toxin?</p><a class="button  button_empty" href="/registration.html">Создать</a>
                 </div>
               </div>
             </div>
@@ -285,7 +285,7 @@
                 </div>
                 <div class="hotel-card__info">
                   <div class="hotel-card__info-item">
-                    <h2 class="hotel-card__title"> <a class="hotel-card__title-link" href="/toxin/room-details.html">№ <span>888</span> <b>люкс</b></a></h2>
+                    <h2 class="hotel-card__title"> <a class="hotel-card__title-link" href="/room-details.html">№ <span>888</span> <b>люкс</b></a></h2>
                     <p class="hotel-card__text"><b>9 900₽</b> в сутки</p>
                   </div>
                   <div class="hotel-card__info-item">
@@ -332,7 +332,7 @@
                 </div>
                 <div class="hotel-card__info">
                   <div class="hotel-card__info-item">
-                    <h2 class="hotel-card__title"><a class="hotel-card__title-link" href="/toxin/room-details.html">№ <span>840</span></a></h2>
+                    <h2 class="hotel-card__title"><a class="hotel-card__title-link" href="/room-details.html">№ <span>840</span></a></h2>
                     <p class="hotel-card__text"><b>9 900₽</b> в сутки</p>
                   </div>
                   <div class="hotel-card__info-item">
