--- a/form-elements.html
+++ b/form-elements.html
@@ -188,12 +188,12 @@
               <div class="pagination__wrap">
                 <p class="pagination__title">Pagination</p>
                 <ul class="pagination__pages">
-                  <li class="pagination__page-item  pagination__page-item_active"><a class="pagination__page-link" href="/toxin/404.html">1</a></li>
-                  <li class="pagination__page-item"><a class="pagination__page-link" href="/toxin/404.html">2</a></li>
-                  <li class="pagination__page-item"><a class="pagination__page-link" href="/toxin/404.html">3</a></li>
-                  <li class="pagination__page-item"><a class="pagination__page-link" href="/toxin/404.html">...</a></li>
-                  <li class="pagination__page-item"><a class="pagination__page-link" href="/toxin/404.html">15</a></li>
-                  <li class="pagination__page-item  pagination__page-next"><a class="pagination__page-link" href="/toxin/404.html">Далее</a></li>
+                  <li class="pagination__page-item  pagination__page-item_active"><a class="pagination__page-link" href="/404.html">1</a></li>
+                  <li class="pagination__page-item"><a class="pagination__page-link" href="/404.html">2</a></li>
+                  <li class="pagination__page-item"><a class="pagination__page-link" href="/404.html">3</a></li>
+                  <li class="pagination__page-item"><a class="pagination__page-link" href="/404.html">...</a></li>
+                  <li class="pagination__page-item"><a class="pagination__page-link" href="/404.html">15</a></li>
+                  <li class="pagination__page-item  pagination__page-next"><a class="pagination__page-link" href="/404.html">Далее</a></li>
                 </ul>
                 <div class="pagination__overview">
                   <p>1 – 12 из 100+ вариантов аренды</p>
