--- a/headers-and-footers.html
+++ b/headers-and-footers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -24,7 +24,7 @@
         <header class="page-header">
           <div class="container">
             <div class="page-header__wrap">
-              <div class="logo"><a class="logo__link" href="/toxin/">
+              <div class="logo"><a class="logo__link" href="/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g display="block"> 
                       <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -57,28 +57,32 @@
                 <div class="main-menu__burger-icon" id="firstBurgerBtn"><span></span><span></span><span></span></div>
                 <nav class="main-menu__nav">
                   <ul class="main-menu__list">
-                    <li class="main-menu__item  main-menu__item_active"><a class="main-menu__item-link">Home</a>
+                    <li class="main-menu__item  main-menu__item_active"><a class="main-menu__item-link">О нас</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">About us</a>
-                    </li>
-                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Services</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Услуги</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">service</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Подбор отелей</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Заказать трансфер</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Рейтинг отелей</a></li>
                       </ul>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Careers</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Вакансии</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">News</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Новости</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Documentation</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Соглашения</a>
+                      <ul class="main-menu__sub-menu">
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Пользовательские</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Международные</a></li>
+                      </ul>
                     </li>
                   </ul>
                 </nav>
               </div>
-              <section class="page-header__auth"><a class="button  button_empty" href="/toxin/auth.html">Login</a><a class="button" href="/toxin/registration.html">Register</a>
+              <section class="page-header__auth"><a class="button  button_empty" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
                 <ul class="page-header__auth-list" id="firstAuthList">
-                  <li class="page-header__auth-item"><a class="page-header__auth-item-link" href="/toxin/auth.html">Login</a></li>
-                  <li class="page-header__auth-item"><a class="page-header__auth-item-link" href="/toxin/registration.html">Register</a></li>
+                  <li class="page-header__auth-item"><a class="page-header__auth-item-link" href="/auth.html">Войти</a></li>
+                  <li class="page-header__auth-item"><a class="page-header__auth-item-link" href="/registration.html">Зарегистрироваться</a></li>
                 </ul>
                 <button class="page-header__auth-profile" id="firstProfileBtn" type="button"></button>
               </section>
@@ -90,7 +94,7 @@
         <header class="page-header">
           <div class="container">
             <div class="page-header__wrap">
-              <div class="logo"><a class="logo__link" href="/toxin/">
+              <div class="logo"><a class="logo__link" href="/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g display="block"> 
                       <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -123,26 +127,30 @@
                 <div class="main-menu__burger-icon" id="secondBurgerBtn"><span></span><span></span><span></span></div>
                 <nav class="main-menu__nav">
                   <ul class="main-menu__list">
-                    <li class="main-menu__item  main-menu__item_active"><a class="main-menu__item-link">Home</a>
+                    <li class="main-menu__item  main-menu__item_active"><a class="main-menu__item-link">О нас</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">About us</a>
-                    </li>
-                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Services</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Услуги</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/toxin/404.html">service</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Подбор отелей</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Заказать трансфер</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Рейтинг отелей</a></li>
                       </ul>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Careers</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Вакансии</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">News</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Новости</a>
                     </li>
-                    <li class="main-menu__item"><a class="main-menu__item-link" href="/toxin/404.html">Documentation</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Соглашения</a>
+                      <ul class="main-menu__sub-menu">
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Пользовательские</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Международные</a></li>
+                      </ul>
                     </li>
                   </ul>
                 </nav>
               </div>
               <section class="page-header__auth  page-header__auth_authenticated">
-                <p class="page-header__user-name">Cosmin Negoita</p>
+                <p class="page-header__user-name">Юлий Цезарь</p>
               </section>
             </div>
           </div>
@@ -154,7 +162,7 @@
             <div class="page-footer__wrap">
               <div class="page-footer__content">
                 <div class="page-footer__col  page-footer__col_large">
-                  <div class="logo"><a class="logo__link" href="/toxin/">
+                  <div class="logo"><a class="logo__link" href="/">
                       <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g display="block"> 
                           <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -185,7 +193,7 @@
                       </svg></a></div>
                   <section class="text-content">
                     <div class="text-content__wrap">
-                      <p class="text-content__paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.</p>
+                      <p class="text-content__paragraph">Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»</p>
                     </div>
                   </section>
                 </div>
@@ -193,12 +201,12 @@
                   <div class="page-footer__col">
                     <section class="nav-menu">
                       <div class="nav-menu__wrap">
-                        <h2 class="nav-menu__title">Navigation</h2>
+                        <h2 class="nav-menu__title">Навигация</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">About us</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">News</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Support</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Products</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">О нас</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Новости</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Служба поддержки</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Услуги</a></li>
                         </ul>
                       </div>
                     </section>
@@ -206,12 +214,12 @@
                   <div class="page-footer__col">
                     <section class="nav-menu">
                       <div class="nav-menu__wrap">
-                        <h2 class="nav-menu__title">About us</h2>
+                        <h2 class="nav-menu__title">О нас</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Who we are</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Our team</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Careers</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Investors</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">О сервисе</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Наша команда</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Вакансии</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Инвесторы</a></li>
                         </ul>
                       </div>
                     </section>
@@ -219,11 +227,11 @@
                   <div class="page-footer__col">
                     <section class="nav-menu">
                       <div class="nav-menu__wrap">
-                        <h2 class="nav-menu__title">Support</h2>
+                        <h2 class="nav-menu__title">Служба поддержки</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Documentation</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Community</a></li>
-                          <li class="nav-menu__item"><a class="nav-menu__link" href="/toxin/404.html">Get in Touch</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Соглашения</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Сообщества</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Связь с нами</a></li>
                         </ul>
                       </div>
                     </section>
@@ -231,14 +239,14 @@
                   <div class="page-footer__col  page-footer__col_large">
                     <section class="text-content">
                       <div class="text-content__wrap">
-                        <h2 class="text-content__title">Subscribe to our newsletter</h2>
-                        <p class="text-content__paragraph">Receive our latest news and promotions in your inbox!</p>
+                        <h2 class="text-content__title">Подписка</h2>
+                        <p class="text-content__paragraph">Получайте специальные предложения и новости сервиса</p>
                       </div>
                     </section>
-                    <form action="/toxin/404.html">
+                    <form action="/404.html">
                       <div class="input-group">
                         <p class="input-group__split">
-                          <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Your email address"/>
+                          <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
                           <button class="input-group__button-split  input-group__button-split_right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
                         </p>
                       </div>
@@ -247,7 +255,7 @@
                 </div>
               </div>
               <div class="page-footer__side-info">
-                <p class="copyright">Copyright © 2018 Toxin UI Kit. All rights reserved.</p>
+                <p class="copyright">Copyright © 2018 Toxin отель. Все права зачищены. </p>
                 <div class="social-buttons">
                   <div class="social-buttons__wrap">
                     <ul class="social-buttons__list">
@@ -271,11 +279,11 @@
           </div>
         </footer>
       </div>
-      <div class="headers-and-footers__item">
+      <div class="headers-and-footers__item  headers-and-footers__item_short">
         <footer class="page-footer  page-footer_short">
           <div class="container">
             <div class="page-footer__wrap  page-footer__wrap_short">
-              <div class="logo"><a class="logo__link" href="/toxin/">
+              <div class="logo"><a class="logo__link" href="/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g display="block"> 
                       <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -304,11 +312,7 @@
                       </linearGradient>
                     </defs>
                   </svg></a></div>
-              <section class="text-content">
-                <div class="text-content__wrap">
-                  <p class="text-content__paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.</p>
-                </div>
-              </section>
+              <p class="copyright">Copyright © 2018 Toxin отель. Все права зачищены. </p>
               <div class="social-buttons">
                 <div class="social-buttons__wrap">
                   <ul class="social-buttons__list">
